# whisper-flet-transcriber

./: README.md  pyproject.toml
app/: main.py  settings.py  transcriber.py  ui.py
docs/: MANUAL.md
