[project]
name = "whisper-flet-transcriber"
version = "0.1.0"
description = "音声ファイル文字起こしGUIアプリ - Whisper × Flet"
requires-python = ">=3.10"
dependencies = [
    "flet>=0.21.0",
    "openai-whisper>=20231117",
    "ffmpeg-python>=0.2.0",
    "sounddevice>=0.5.0",
    "scipy>=1.10.0",
]

[project.scripts]
app = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
